@@ -1,3 +1,5 @@
+extra_config_options = --enable-multi-arch
+
 # build 64-bit (ppc64) alternative library
 EGLIBC_PASSES += ppc64
 DEB_ARCH_REGULAR_PACKAGES += libc6-ppc64 libc6-dev-ppc64
