@@ -1,3 +1,4 @@
+extra_config_options = --enable-multi-arch
 libc_rtlddir = /lib64
 libc_extra_cflags = -mcpu=ultrasparc
 
