@@ -93,6 +93,8 @@ eglibc (2.13-0exp1) experimental; urgency=low
     Closes: ##602776.
   * debian/rules: split build-indep and build-arch targets.  Closes: 
     #611926.
+  * sysdeps/sparc.mk, sysdeps/sparc64.mk: build with --enable-multi-arch.
+  * sysdeps/powerpc.mk, sysdeps/ppc64.mk: build with --enable-multi-arch.
 
  -- Aurelien Jarno <aurel32@debian.org>  Sun, 06 Feb 2011 16:52:51 +0100
 
